testsuite/poke.pkl/pow-f32-diag-1.pk
/* { dg-do compile } */

var res
  = (7 as uint<33>) .** 1; /* { dg-error "invalid operand .*" } */
